--- a/Css/common_style.css
+++ b/Css/common_style.css
@@ -2,6 +2,7 @@ body {
     margin: 0px;
     padding: 0px;
 }
+
 .center{
     text-align: center;
 }
@@ -18,6 +19,7 @@ body {
     flex-direction: column;
     width: 250px;
     display: flex;
+    cursor: pointer;
 
 
 }
@@ -31,7 +33,7 @@ body {
 .side_bar_items {
     border-radius: 10px;
     background-color: #f38c06;
-    margin-top: 40px;
+    margin-top: 20px;
     margin-left: 15px;
     margin-right: 15px;
     font-size: 20px;
